<resources>
    <string name="app_name">MODELOS DE FILAS DE ESPERA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TModelo">Modelos de Filas de Espera</string>
    <string name="DMM1">Población infinita, capacidad del sistema infinito, un canal de servicio.</string>
    <string name="DMMs">Población infinita, capacidad del sistema infinito, S canales de servicio.</string>
    <string name="DMMsK">Población infinita, capacidad del sistema limitado a K, S canales de servicio.</string>
    <string name="DMG1">Población infinita, capacidad del sistema limitado a K, S canales de servicio.</string>
</resources>