<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_claro"
    tools:context=".view.MainMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewModelos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TModelo"
            android:textAlignment="center"
            android:textColor="@color/morado_obscuro"
            android:textSize="34sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/CardViewMM1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/gris"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMM1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/morado_obscuro"
                    android:text="M/M/1"
                    android:textAlignment="center"
                    android:textColor="@color/naranja"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDMM1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/DMM1"
                    android:textAlignment="center"
                    android:textColor="@color/morado_obscuro"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardViewMMs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/gris"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMMS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/morado_obscuro"
                    android:text="M/M/s"
                    android:textAlignment="center"
                    android:textColor="@color/naranja"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDMMs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/DMMs"
                    android:textAlignment="center"
                    android:textColor="@color/morado_obscuro"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardViewMMsK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/gris"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMMsK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/morado_obscuro"
                    android:text="M/M/s/K"
                    android:textAlignment="center"
                    android:textColor="@color/naranja"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDMMsK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/DMMsK"
                    android:textAlignment="center"
                    android:textColor="@color/morado_obscuro"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardVIewMG1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/gris"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMG1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/morado_obscuro"
                    android:text="M/G/1"
                    android:textAlignment="center"
                    android:textColor="@color/naranja"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewDMG1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/DMG1"
                    android:textAlignment="center"
                    android:textColor="@color/morado_obscuro"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>